Move subRows from group to tracks.
BUG=trace-viewer:83

Review URL: https://codereview.appspot.com/6465048

--- a/trunk/src/linux_perf_exynos_parser_test.html
+++ b/trunk/src/linux_perf_exynos_parser_test.html
@@ -36,7 +36,7 @@ tests.testExynosImport = function() {
 
   var gfxFlipThread = threads[0];
   assertEquals('exynos_flip', gfxFlipThread.name);
-  assertEquals(1, gfxFlipThread.subRows.length);
+  assertEquals(1, gfxFlipThread.slices.length);
 }
 
 return tests;
