--- a/trunk/src/linux_perf_drm_parser_test.html
+++ b/trunk/src/linux_perf_drm_parser_test.html
@@ -36,7 +36,7 @@ tests.testDrmImport = function() {
 
   var vblankThread = threads[0];
   assertEquals('drm_vblank', vblankThread.name);
-  assertEquals(1, vblankThread.subRows.length);
+  assertEquals(2, vblankThread.slices.length);
 }
 
 return tests;
