--- a/trunk/src/timeline_track_test.html
+++ b/trunk/src/timeline_track_test.html
@@ -27,28 +27,25 @@ found in the LICENSE file.
 
   var TimelineAsyncSlice = tracing.TimelineAsyncSlice;
   var TimelineAsyncSliceGroup = tracing.TimelineAsyncSliceGroup;
+  var TimelineAsyncSliceGroupTrack = tracing.TimelineAsyncSliceGroupTrack;
   var TimelineCounter = tracing.TimelineCounter;
   var TimelineCounterTrack = tracing.TimelineCounterTrack;
   var TimelineCpu = tracing.TimelineCpu;
   var TimelineCpuTrack = tracing.TimelineCpuTrack;
   var TimelineProcess = tracing.TimelineProcess;
   var TimelineSelection = tracing.TimelineSelection;
+  var TimelineSliceGroup = tracing.TimelineSliceGroup;
+  var TimelineSliceGroupTrack = tracing.TimelineSliceGroupTrack;
   var TimelineSliceTrack = tracing.TimelineSliceTrack;
   var TimelineSlice = tracing.TimelineSlice;
   var TimelineThread = tracing.TimelineThread;
   var TimelineThreadSlice = tracing.TimelineThreadSlice;
   var TimelineThreadTrack = tracing.TimelineThreadTrack;
   var TimelineViewport = tracing.TimelineViewport;
+  var newAsyncSlice = test_utils.newAsyncSlice;
+  var newAsyncSliceNamed = test_utils.newAsyncSliceNamed;
+  var newSliceNamed = test_utils.newSliceNamed;
   var testDivs = {};
-
-  // Helper function to create a slice.
-  function newAsyncSlice(start, duration, startThread, endThread) {
-    var s = new TimelineAsyncSlice('', 'a', 0, start);
-    s.duration = duration;
-    s.startThread = startThread;
-    s.endThread = endThread;
-    return s;
-  }
 
   tests.testBasicSlices = function() {
     var testEl = this.addHTMLOutput();
@@ -153,11 +150,11 @@ found in the LICENSE file.
 
     var selection = new TimelineSelection();
     track.addIntersectingItemsToSelection(1.5, clientRect.top + 5, selection);
-    assertEquals(t1.subRows[0][0], selection[0].slice);
+    assertEquals(t1.slices[0], selection[0].slice);
 
     var selection = new TimelineSelection();
     track.addIntersectingItemsInRangeToSelection(1.5, 1.8, clientRect.top + 5, clientRect.top + 7, selection);
-    assertEquals(t1.subRows[0][0], selection[0].slice);
+    assertEquals(t1.slices[0], selection[0].slice);
   }
 
   tests.testBasicCpu = function() {
@@ -474,7 +471,359 @@ found in the LICENSE file.
     ret = track.addItemNearToProvidedHitToSelection(sel[0], -1, selNone);
     assertFalse(ret);
     assertEquals(0, selNone.length);
+  }
 
+  tests.testFilterThreadSlices = function() {
+    var thread = new TimelineThread(new TimelineProcess(7), 1);
+    thread.pushSlice(newSliceNamed('a', 0, 0));
+    thread.asyncSlices.push(newAsyncSliceNamed('a', 0, 5, t, t));
+
+    var t = new TimelineThreadTrack();
+    t.thread = thread;
+
+    assertTrue(t.tracks_[1].visible);
+    assertEquals(1, t.tracks_[1].tracks_.length);
+    assertTrue(t.tracks_[1].visible);
+    assertEquals(1, t.tracks_[2].tracks_.length);
+
+    t.categoryFilter = new tracing.TimelineTitleFilter('x');
+    assertFalse(t.tracks_[1].visible);
+    assertFalse(t.tracks_[1].visible);
+
+    t.categoryFilter = new tracing.TimelineTitleFilter('a');
+    assertTrue(t.tracks_[1].visible);
+    assertEquals(1, t.tracks_[1].tracks_.length);
+    assertTrue(t.tracks_[1].visible);
+    assertEquals(1, t.tracks_[2].tracks_.length);
+  }
+
+  tests.testSubRowBuilderBasic = function() {
+    var group = new TimelineSliceGroup();
+    var sA = group.pushSlice(newSliceNamed("a", 1, 2));
+    var sB = group.pushSlice(newSliceNamed("a", 3, 1));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(1, subRows.length);
+    assertEquals(2, subRows[0].length);
+    assertArrayEquals([sA, sB], subRows[0]);
+  }
+
+  tests.testSubRowBuilderBasic2 = function() {
+    var group = new TimelineSliceGroup();
+    var sA = group.pushSlice(newSliceNamed("a", 1, 4));
+    var sB = group.pushSlice(newSliceNamed("b", 3, 1));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(2, subRows.length);
+    assertEquals(1, subRows[0].length);
+    assertEquals(1, subRows[1].length);
+    assertArrayEquals([sA], subRows[0]);
+    assertArrayEquals([sB], subRows[1]);
+  }
+
+  tests.testSubRowBuilderNestedExactly = function() {
+    var group = new TimelineSliceGroup();
+    var sA = group.pushSlice(newSliceNamed("a", 1, 4));
+    var sB = group.pushSlice(newSliceNamed("b", 1, 4));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(2, subRows.length);
+    assertEquals(1, subRows[0].length);
+    assertEquals(1, subRows[1].length);
+    assertArrayEquals([sA], subRows[0]);
+    assertArrayEquals([sB], subRows[1]);
+  }
+
+  tests.testSubRowBuilderInstantEvents = function() {
+    var group = new TimelineSliceGroup();
+    var sA = group.pushSlice(newSliceNamed("a", 1, 0));
+    var sB = group.pushSlice(newSliceNamed("b", 2, 0));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(1, subRows.length);
+    assertEquals(2, subRows[0].length);
+    assertArrayEquals([sA, sB], subRows[0]);
+  }
+
+  tests.testSubRowBuilderTwoInstantEvents = function() {
+    var group = new TimelineSliceGroup();
+    var sA = group.pushSlice(newSliceNamed("a", 1, 0));
+    var sB = group.pushSlice(newSliceNamed("b", 1, 0));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(2, subRows.length);
+    assertArrayEquals([sA], subRows[0]);
+    assertArrayEquals([sB], subRows[1]);
+  }
+
+  tests.testSubRowBuilderOutOfOrderAddition = function() {
+    var group = new TimelineSliceGroup();
+
+    // Pattern being tested:
+    // [    a     ][   b   ]
+    // Where insertion is done backward.
+    var sB = group.pushSlice(newSliceNamed("b", 3, 1));
+    var sA = group.pushSlice(newSliceNamed("a", 1, 2));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(1, subRows.length);
+    assertEquals(2, subRows[0].length);
+    assertArrayEquals([sA, sB], subRows[0]);
+  }
+
+
+  tests.testSubRowBuilderOutOfOrderAddition2 = function() {
+    var group = new TimelineSliceGroup();
+
+    // Pattern being tested:
+    // [    a     ]
+    //   [  b   ]
+    // Where insertion is done backward.
+    var sB = group.pushSlice(newSliceNamed("b", 3, 1));
+    var sA = group.pushSlice(newSliceNamed("a", 1, 5));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(2, subRows.length);
+    assertEquals(1, subRows[0].length);
+    assertEquals(1, subRows[1].length);
+    assertArrayEquals([sA], subRows[0]);
+    assertArrayEquals([sB], subRows[1]);
+  }
+
+  tests.testSubRowBuilderOnNestedZeroLength = function() {
+    var group = new TimelineSliceGroup();
+
+    // Pattern being tested:
+    // [    a    ]
+    // [  b1 ]  []<- b2 where b2.duration = 0 and b2.end == a.end.
+    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
+    var sB1 = group.pushSlice(newSliceNamed("b1", 1, 2));
+    var sB2 = group.pushSlice(newSliceNamed("b2", 4, 0));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(2, subRows.length);
+    assertArrayEquals([sA], subRows[0]);
+    assertArrayEquals([sB1, sB2], subRows[1]);
+  }
+
+  tests.testSubRowBuilderOnGroup1 = function() {
+    var group = new TimelineSliceGroup();
+
+    // Pattern being tested:
+    // [    a     ]   [  c   ]
+    //   [  b   ]
+    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
+    var sB = group.pushSlice(newSliceNamed("b", 1.5, 1));
+    var sC = group.pushSlice(newSliceNamed("c", 5, 0));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+    var subRows = track.subRows_;
+
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(2, subRows.length);
+    assertArrayEquals([sA, sC], subRows[0]);
+    assertArrayEquals([sB], subRows[1]);
+  }
+
+  tests.testSubRowBuilderOnGroup2 = function() {
+    var group = new TimelineSliceGroup();
+
+    // Pattern being tested:
+    // [    a     ]   [  d   ]
+    //   [  b   ]
+    //    [ c ]
+    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
+    var sB = group.pushSlice(newSliceNamed("b", 1.5, 1));
+    var sC = group.pushSlice(newSliceNamed("c", 1.75, 0.5));
+    var sD = group.pushSlice(newSliceNamed("c", 5, 0.25));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+
+    var subRows = track.subRows_;
+    assertEquals(0, track.badSlices_.length);
+    assertEquals(3, subRows.length);
+    assertArrayEquals([sA, sD], subRows[0]);
+    assertArrayEquals([sB], subRows[1]);
+    assertArrayEquals([sC], subRows[2]);
+  }
+
+  tests.testTrackFiltering = function() {
+    var group = new TimelineSliceGroup();
+
+    var sA = group.pushSlice(newSliceNamed("a", 1, 3));
+    var sB = group.pushSlice(newSliceNamed("b", 1.5, 1));
+
+    var track = new TimelineSliceGroupTrack();
+    track.group = group;
+
+    assertEquals(2, track.subRows_.length);
+    assertTrue(track.visible);
+
+    track.categoryFilter = new tracing.TimelineTitleFilter('x');
+    assertFalse(track.visible);
+
+    track.categoryFilter = new tracing.TimelineTitleFilter('a');
+    assertTrue(track.visible);
+    assertEquals(1, track.subRows_.length);
+
+    track.categoryFilter = new tracing.TimelineTitleFilter('b');
+    assertTrue(track.visible);
+    assertEquals(1, track.subRows_.length);
+  }
+
+  tests.testAsyncSliceGroup_filterSubRows =
+      function() {
+    var p1 = new TimelineProcess(1);
+    var t1 = new TimelineThread(p1, 1);
+    var g = new TimelineAsyncSliceGroup('a');
+    g.slices.push(newAsyncSlice(0, 1, t1, t1));
+    console.log(JSON.stringify(g));
+    var track = new TimelineAsyncSliceGroupTrack();
+    track.group = g;
+
+    assertEquals(1, track.subRows_.length);
+    assertTrue(track.visible);
+
+    track.categoryFilter = new tracing.TimelineTitleFilter('x');
+    assertFalse(track.visible);
+
+    track.categoryFilter = new tracing.TimelineTitleFilter('a');
+    assertTrue(track.visible);
+    assertEquals(1, track.subRows_.length);
+  }
+
+  tests.testAsyncSliceGroup_rebuildSubRows_twoNonOverlappingSlices =
+      function() {
+    var p1 = new TimelineProcess(1);
+    var t1 = new TimelineThread(p1, 1);
+    var g = new TimelineAsyncSliceGroup('a');
+    g.slices.push(newAsyncSlice(0, 1, t1, t1));
+    g.slices.push(newAsyncSlice(1, 1, t1, t1));
+    var track = new TimelineAsyncSliceGroupTrack();
+    track.group = g;
+    var subRows = track.subRows_;
+
+    assertEquals(1, subRows.length);
+    assertEquals(2, subRows[0].length);
+    assertEquals(g.slices[0].subSlices[0], subRows[0][0]);
+    assertEquals(g.slices[1].subSlices[0], subRows[0][1]);
+  }
+
+  tests.testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices = function() {
+    var p1 = new TimelineProcess(1);
+    var t1 = new TimelineThread(p1, 1);
+    var g = new TimelineAsyncSliceGroup('a');
+    g.slices.push(newAsyncSlice(0, 1, t1, t1));
+    g.slices.push(newAsyncSlice(0, 1.5, t1, t1));
+    g.updateBounds();
+    var track = new TimelineAsyncSliceGroupTrack();
+    track.group = g;
+    var subRows = track.subRows_;
+
+    assertEquals(2, subRows.length);
+    assertEquals(1, subRows[0].length);
+    assertEquals(g.slices[0], subRows[0][0]);
+    assertEquals(1, subRows[1].length);
+    assertEquals(g.slices[1], subRows[1][0]);
+  }
+
+  tests.testAsyncSliceGroup_rebuildSubRows_threePartlyOverlappingSlices =
+      function() {
+    var p1 = new TimelineProcess(1);
+    var t1 = new TimelineThread(p1, 1);
+    var g = new TimelineAsyncSliceGroup('a');
+    g.slices.push(newAsyncSlice(0, 1, t1, t1));
+    g.slices.push(newAsyncSlice(0, 1.5, t1, t1));
+    g.slices.push(newAsyncSlice(1, 1.5, t1, t1));
+    g.updateBounds();
+    var track = new TimelineAsyncSliceGroupTrack();
+    track.group = g;
+    var subRows = track.subRows_;
+
+    assertEquals(2, subRows.length);
+    assertEquals(2, subRows[0].length);
+    assertEquals(g.slices[0].subSlices[0], subRows[0][0]);
+    assertEquals(g.slices[2].subSlices[0], subRows[0][1]);
+    assertEquals(1, subRows[1].length);
+    assertEquals(g.slices[1].subSlices[0], subRows[1][0]);
+  }
+
+  tests.testAsyncSliceGroup_rebuildSubRows_twoOverlappingSlices = function() {
+    var p1 = new TimelineProcess(1);
+    var t1 = new TimelineThread(p1, 1);
+    var g = new TimelineAsyncSliceGroup('a');
+    g.slices.push(newAsyncSlice(0, 1, t1, t1));
+    g.slices.push(newAsyncSlice(0, 1.5, t1, t1));
+    g.slices.push(newAsyncSlice(2, 1, t1, t1));
+    g.updateBounds();
+    var track = new TimelineAsyncSliceGroupTrack();
+    track.group = g;
+    var subRows = track.subRows_;
+
+    assertEquals(2, subRows.length);
+    assertEquals(2, subRows[0].length);
+    assertEquals(g.slices[0].subSlices[0], subRows[0][0]);
+    assertEquals(g.slices[2].subSlices[0], subRows[0][1]);
+    assertEquals(1, subRows[1].length);
+    assertEquals(g.slices[1].subSlices[0], subRows[1][0]);
+  }
+
+  tests.testAsyncSliceGroup_computeSubGroups_twoThreadSpecificSlices =
+      function() {
+    var p1 = new TimelineProcess(1);
+    var t1 = new TimelineThread(p1, 1);
+    var t2 = new TimelineThread(p1, 2);
+    var g = new TimelineAsyncSliceGroup('a');
+    g.slices.push(newAsyncSlice(0, 1, t1, t1));
+    g.slices.push(newAsyncSlice(0, 1, t2, t2));
+    var track = new TimelineAsyncSliceGroupTrack();
+    track.group = g;
+    var subRows = track.subRows_;
+
+    var subGroups = g.computeSubGroups();
+    assertEquals(2, subGroups.length);
+
+    assertEquals(g.name, subGroups[0].name);
+    assertEquals(1, subGroups[0].slices.length);
+    assertEquals(g.slices[0], subGroups[0].slices[0]);
+
+    assertEquals(g.name, subGroups[1].name);
+    assertEquals(1, subGroups[1].slices.length);
+    assertEquals(g.slices[1], subGroups[1].slices[0]);
   }
 
   return tests;
