Split tracks into individual files in their own directory.
BUG=None

Review URL: https://codereview.appspot.com/6463052

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -19,7 +19,6 @@ found in the LICENSE file.
     'timeline_cpu_test.html',
     'timeline_filter_test.html',
     'timeline_model_test.html',
-    'timeline_track_test.html',
     'linux_perf_importer_test.html',
     'linux_perf_cpufreq_parser_test.html',
     'linux_perf_drm_parser_test.html',
@@ -36,6 +35,12 @@ found in the LICENSE file.
     'timeline_analysis_test.html',
     'ui_test.html',
     'settings_test.html',
+    'tracks/timeline_async_slice_group_track_test.html',
+    'tracks/timeline_cpu_track_test.html',
+    'tracks/timeline_slice_group_track_test.html',
+    'tracks/timeline_slice_track_test.html',
+    'tracks/timeline_thread_track_test.html',
+    'tracks/timeline_viewport_track_test.html',
   ];
 </script>
 <style>
