--- a/trunk/src/timeline_test.html
+++ b/trunk/src/timeline_test.html
@@ -18,7 +18,8 @@ base.defineModule('timeline_test')
     .dependsOn('unittest',
                'test_utils',
                'trace_event_importer',
-               'timeline')
+               'timeline',
+               'tracks.timeline_slice_track')
     .runAllTests(function() {
 
     var tests = {};
@@ -107,7 +108,7 @@ base.defineModule('timeline_test')
       t1.pushSlice(new tracing.TimelineThreadSlice('', 'a', 0, 1, {}, 3));
       t1.pushSlice(new tracing.TimelineThreadSlice('', 'a', 0, 5, {}, 1));
 
-      var track = new tracing.TimelineSliceTrack();
+      var track = new tracks.TimelineSliceTrack();
       track.slices = t1.slices;
 
       var sel = new tracing.TimelineSelection();
