Create a full Track hierarchy.
- Add model, process and cpu track types.
- Move filtering decision to each track.
- Share as much code as possible in TimelineTrack and TimelineContainerTrack.

BUG=trace-viewer:96

Review URL: https://codereview.appspot.com/6463074

--- a/trunk/src/about_tracing.html
+++ b/trunk/src/about_tracing.html
@@ -32,6 +32,13 @@ body {
 }
 
 </style>
+<link rel="stylesheet" href="tracks/timeline_track.css">
+<link rel="stylesheet" href="tracks/timeline_canvas_based_track.css">
+<link rel="stylesheet" href="tracks/timeline_slice_track.css">
+<link rel="stylesheet" href="tracks/timeline_counter_track.css">
+<link rel="stylesheet" href="tracks/timeline_thread_track.css">
+<link rel="stylesheet" href="tracks/timeline_model_track.css">
+<link rel="stylesheet" href="tracks/timeline_viewport_track.css">
 <link rel="stylesheet" href="timeline.css">
 <link rel="stylesheet" href="timeline_analysis.css">
 <link rel="stylesheet" href="overlay.css">
