--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -12,9 +12,11 @@ found in the LICENSE file.
     'unittest_test.html',
     'overlay_test.html',
     'timeline_async_slice_group_test.html',
+    'timeline_find_control_test.html',
     'timeline_slice_group_test.html',
     'timeline_thread_test.html',
     'timeline_process_test.html',
+    'timeline_category_filter_dialog_test.html',
     'timeline_counter_test.html',
     'timeline_cpu_test.html',
     'timeline_filter_test.html',
