--- a/trunk/src/timeline_filter_test.html
+++ b/trunk/src/timeline_filter_test.html
@@ -53,16 +53,32 @@ base.defineModule('timeline_filter_test')
   tests.testTimelineCategoryFilter = function() {
     var sNoCategory = test_utils.newSlice(1, 3);
     sNoCategory.category = undefined;
-    assertFalse(new TimelineCategoryFilter(["x"]).matchSlice(sNoCategory));
+    assertTrue(new TimelineCategoryFilter(["x"]).matchSlice(sNoCategory));
 
     var s0 = test_utils.newSlice(1, 3);
     s0.category = 'x';
-    assertTrue(new TimelineCategoryFilter(["x"]).matchSlice(s0));
+    assertFalse(new TimelineCategoryFilter(["x"]).matchSlice(s0));
 
     var s1 = test_utils.newSliceNamed('ba', 1, 3);
     s1.category = 'y';
-    assertFalse(new TimelineCategoryFilter(["x"]).matchSlice(s1));
-    assertTrue(new TimelineCategoryFilter(["x", "y"]).matchSlice(s1));
+    assertTrue(new TimelineCategoryFilter(["x"]).matchSlice(s1));
+    assertFalse(new TimelineCategoryFilter(["y"]).matchSlice(s1));
+    assertFalse(new TimelineCategoryFilter(["x", "y"]).matchSlice(s1));
+  }
+
+  tests.testFilterSliceArray = function() {
+    var slices = [
+      test_utils.newSliceNamed('ba', 1, 3),
+      test_utils.newSliceNamed('ab', 1, 3),
+      test_utils.newSliceNamed('x', 1, 3),
+      test_utils.newSliceNamed('axa', 1, 3)
+    ];
+    var filter = new TimelineTitleFilter('a');
+    var matched = tracing.filterSliceArray(filter, slices);
+    assertEquals(3, matched.length);
+    assertEquals('ba', matched[0].title);
+    assertEquals('ab', matched[1].title);
+    assertEquals('axa', matched[2].title);
   }
 
   return tests;
