--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -33,50 +33,6 @@ base.defineModule('timeline_view_test')
     var newSliceNamed = test_utils.newSliceNamed;
 
     var tests = {};
-    /*
-     * Just enough of the Timeline to support the tests below.
-     */
-    var FakeTimeline = base.ui.define('div');
-
-    FakeTimeline.prototype = {
-      __proto__: HTMLDivElement.prototype,
-
-      decorate: function() {
-        this.addAllObjectsMatchingFilterToSelectionReturnValue = [];
-
-        this.selection = new tracing.TimelineSelection();
-        this.keyHelp = "<keyHelp>";
-
-        // Put some simple UI in for testing purposes.
-        var noteEl = document.createElement('div');
-        noteEl.textContent = "FakeTimeline:";
-        this.appendChild(noteEl);
-
-        this.statusEl_ = document.createElement('div');
-        this.appendChild(this.statusEl_);
-        this.refresh_();
-      },
-
-      refresh_: function() {
-        var status;
-        if (this.model)
-          status = "model=set";
-        else
-          status = "model=undefined";
-        this.statusEl_.textContent = status;
-      },
-
-      setSelectionAndMakeVisible: function(selection, zoomAllowed) {
-        this.selection = selection;
-      },
-
-      addAllObjectsMatchingFilterToSelection: function(filter, selection) {
-        var n = this.addAllObjectsMatchingFilterToSelectionReturnValue.length;
-        for (var i = 0; i < n; i++)
-          selection.push_(
-              this.addAllObjectsMatchingFilterToSelectionReturnValue[i]);
-      }
-    };
 
     /*
      * This test just instantiates a TimelineView and adds it to the DOM
@@ -92,14 +48,15 @@ base.defineModule('timeline_view_test')
         var process = model.getOrCreateProcess(10000 + testIndex); 
         if(testIndex % 2 == 0) {
           var thread = process.getOrCreateThread('Thread Name Here');
-          thread.slices.push(newSliceNamed('a', startTime, 1));
-          thread.slices.push(newSliceNamed('b', startTime + 1.15, .5));
+          thread.slices.push(new tracing.TimelineSlice('foo', 'a', 0, startTime, {}, 1));
+          thread.slices.push(new tracing.TimelineSlice('bar', 'b', 0, startTime + 1.15, {}, .5));
         } else {
           var thread = process.getOrCreateThread('Name');
-          thread.slices.push(newSliceNamed('a', startTime + .17, .55));
-          thread.slices.push(newSliceNamed('b', startTime + 1.1, .7));
+          thread.slices.push(new tracing.TimelineSlice('foo', 'a', 0, startTime + .17, {}, .55));
+          thread.slices.push(new tracing.TimelineSlice('bar', 'b', 0, startTime + 1.1, {}, .7));
         }
       }
+      model.updateCategories_();
 
       /*
        * Add a slice with the same title as one of the previous slices
@@ -128,144 +85,39 @@ base.defineModule('timeline_view_test')
       document.body.appendChild(view);
     }
 
-    /*
-     * This test just instantiates a FindDialog and adds it to the DOM
-     * to help with non-unittest UI work.
-     */
-    tests.testInstantiateTimelineFindControl = function() {
-      var ctl = new tracing.TimelineFindControl();
-      var didFindPrevious = false;
-      var didFindNext = false;
-      ctl.controller = {
-        findNext: function() {
-          didFindNext = true;
-        },
-
-        findPrevious: function() {
-          didFindPrevious = true;
-        },
-
-        filterHits: [],
-
-        currentHitIndex: 0,
-      }
-      document.body.appendChild(ctl);
-      ctl.querySelector('input').focus();
-      ctl.querySelector('input').blur();
-
-      ctl.querySelector('.find-previous').click();
-      assertTrue(didFindPrevious);
-      ctl.querySelector('.find-next').click();
-      assertTrue(didFindNext);
-    }
-
-    tests.testFindControllerNoTimeline = function() {
-      var controller = new tracing.TimelineFindController();
-      controller.findNext();
-      controller.findPrevious();
-    }
-
-    tests.testFindControllerEmptyHit = function() {
-      var timeline = new FakeTimeline();
-      var controller = new tracing.TimelineFindController();
-      controller.timeline = timeline;
-
-      timeline.selection = new tracing.TimelineSelection();
-      controller.findNext();
-      assertArrayShallowEquals([], timeline.selection);
-      controller.findPrevious();
-      assertArrayShallowEquals([], timeline.selection);
-    }
-
-    tests.testFindControllerOneHit = function() {
-      var timeline = new FakeTimeline();
-      var controller = new tracing.TimelineFindController();
-      controller.timeline = timeline;
-
-      timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [1];
-      controller.findNext();
-      assertArrayShallowEquals([1], timeline.selection);
-      controller.findNext();
-      assertArrayShallowEquals([1], timeline.selection);
-      controller.findPrevious();
-      assertArrayShallowEquals([1], timeline.selection);
-    }
-
-    tests.testFindControllerMultipleHits = function() {
-      var timeline = new FakeTimeline();
-      var controller = new tracing.TimelineFindController();
-      controller.timeline = timeline;
-
-      timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [1,2,3];
-
-      // Loop through hits then when we wrap, try moving backward.
-      controller.findNext();
-      assertArrayShallowEquals([1], timeline.selection);
-      controller.findNext();
-      assertArrayShallowEquals([2], timeline.selection);
-      controller.findNext();
-      assertArrayShallowEquals([3], timeline.selection);
-      controller.findNext();
-      assertArrayShallowEquals([1], timeline.selection);
-      controller.findPrevious();
-      assertArrayShallowEquals([3], timeline.selection);
-      controller.findPrevious();
-      assertArrayShallowEquals([2], timeline.selection);
-    }
-
-    tests.testFindControllerChangeFilterAfterNext = function() {
-      var timeline = new FakeTimeline();
-      var controller = new tracing.TimelineFindController();
-      controller.timeline = timeline;
-
-      timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [1,2,3];
-
-      // Loop through hits then when we wrap, try moving backward.
-      controller.findNext();
-      timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [4];
-      controller.filterText = "asdfsf";
-      controller.findNext();
-      assertArrayShallowEquals([4], timeline.selection);
-    }
-
-    tests.testFindControllerSelectsFirstItemImmediately = function() {
-      var timeline = new FakeTimeline();
-      var controller = new tracing.TimelineFindController();
-      controller.timeline = timeline;
-      timeline.addAllObjectsMatchingFilterToSelectionReturnValue = [1,2,3];
-      controller.filterText = "asdfsf";
-      assertArrayShallowEquals([1], timeline.selection);
-      controller.findNext();
-      assertArrayShallowEquals([2], timeline.selection);
-    }
-
-    tests.testFindControllerWithRealTimeline = function() {
+    tests.testSetModelUpdatesCategories = function() {
       var model = new tracing.TimelineModel();
       var p1 = model.getOrCreateProcess(1);
       var t1 = p1.getOrCreateThread(1);
-      t1.pushSlice(new tracing.TimelineThreadSlice('', 'a', 0, 1, {}, 3));
 
-      var timeline = new tracing.Timeline();
-      timeline.model = model;
+      t1.pushSlice(new tracing.TimelineThreadSlice('foo', 'a', 0, 1, {}, 3));
+      t1.pushSlice(new tracing.TimelineThreadSlice('bar', 'b', 0, 1.1, {}, 2.8));
+      t1.pushSlice(new tracing.TimelineThreadSlice('baz', 'b', 0, 1.2, {}, 2.4));
+      model.updateCategories_();
+      model.updateBounds();
 
-      var controller = new tracing.TimelineFindController();
-      controller.timeline = timeline;
+      var view = new tracing.TimelineView();
+      view.settings.set('foo', true, 'categories');
+      view.settings.set('bar', false, 'categories');
+      view.model = model;
 
-      // Test find with no filterText.
-      controller.findNext();
-
-      // Test find with filter txt.
-      controller.filterText = 'a';
-      controller.findNext();
-      assertEquals(1, timeline.selection.length);
-      assertEquals(t1.slices[0], timeline.selection[0].slice);
-
-      controller.filterText = 'xxx';
-      controller.findNext();
-      assertEquals(0, timeline.selection.length);
-      controller.findNext();
-      assertEquals(0, timeline.selection.length);
+      assertUndefined(view.timeline.categoryFilter_.categories_['foo']);
+      assertTrue(view.timeline.categoryFilter_.categories_['bar']);
+      assertUndefined(view.timeline.categoryFilter_.categories_['baz']);
     }
+
+    tests.testUpdateCategoryFilterFromSettings = function() {
+      var view = new tracing.TimelineView();
+      view.timeline_ = {};
+      view.settings.set('foo', true, 'categories');
+      view.settings.set('bar', false, 'categories');
+      view.settings.set('baz', false, 'categories');
+      view.updateCategoryFilterFromSettings_();
+      assertUndefined(view.timeline_.categoryFilter.categories_['foo']);
+      assertTrue(view.timeline_.categoryFilter.categories_['bar']);
+      assertTrue(view.timeline_.categoryFilter.categories_['baz']);
+    }
+
 
     return tests;
 });
