Use addHTMLOutput on tests
TBR=kassycoan@chromium.org

Review URL: https://codereview.appspot.com/6487048

--- a/trunk/src/timeline_find_control_test.html
+++ b/trunk/src/timeline_find_control_test.html
@@ -99,7 +99,7 @@ base.defineModule('timeline_find_control_test')
 
         currentHitIndex: 0,
       }
-      document.body.appendChild(ctl);
+      this.addHTMLOutput(undefined, ctl);
       ctl.querySelector('input').focus();
       ctl.querySelector('input').blur();
 
