--- a/trunk/src/timeline_view_test.html
+++ b/trunk/src/timeline_view_test.html
@@ -82,7 +82,7 @@ base.defineModule('timeline_view_test')
       view.timeline.addAllObjectsMatchingFilterToSelection({matchSlice: function(){return true;}}, selection);
       view.timeline.selection = selection;
 
-      document.body.appendChild(view);
+      this.addHTMLOutput(undefined, view);
     }
 
     tests.testSetModelUpdatesCategories = function() {
