--- a/trunk/src/tracks/timeline_counter_track.html
+++ b/trunk/src/tracks/timeline_counter_track.html
@@ -91,7 +91,7 @@ found in the LICENSE file.
 
     var track = new TimelineCounterTrack();
     testEl.appendChild(track);
-    document.body.appendChild(testEl);
+    this.addHTMLOutput(undefined, testEl);
 
     track.heading = ctr.name;
     track.counter = ctr;
