Move TimelineViewport and TimelineSelection to their own files
Review URL: https://codereview.appspot.com/6482079

--- a/trunk/src/tests.html
+++ b/trunk/src/tests.html
@@ -32,8 +32,10 @@ found in the LICENSE file.
     'linux_perf_workqueue_parser_test.html',
     'trace_event_importer_test.html',
     'profiling_view_test.html',
+    'timeline_selection_test.html',
     'timeline_test.html',
     'timeline_view_test.html',
+    'timeline_viewport_test.html',
     'timeline_analysis_test.html',
     'ui_test.html',
     'settings_test.html',
